added transaction712 RPL serialization with Withdraw test case

--- a/requirements_old.txt
+++ b/requirements_old.txt
@@ -1,7 +1,5 @@
-eip712_structs==1.1.0
 eth_account==0.5.7
 eth_typing==2.3.0
 eth_utils==1.10.0
 hexbytes==0.2.2
-rlp==2.0.1
-web3==5.29.2
+# web3==5.29.1
