implementation of Withdraw operation + move SDK to web3 == 6.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,14 +10,9 @@ license = MIT
 packages = find:
 install_requires =
     eip712_structs == 1.1.0
-    eth_account == 0.5.7
-    eth_typing==2.3.0
-    eth_utils==1.10.0
-    hexbytes==0.2.2
-    rlp==2.0.1
-    web3==5.30.0
+    web3==6.0.0
 
-python_requires = >=3.8
+python_requires = >=3.10
 setup_requires =
 	setuptools_scm >= v7.0.5
 
@@ -32,13 +27,14 @@ include =
 
 [options.package_data]
 zksync2.manage_contracts.contract_abi =
-    IContractDeployer.json
+    ContractDeployer.json
     IERC20.json
+    IEthToken.json
     IL1Bridge.json
     IL2Bridge.json
     INonceHolder.json
+    IPaymasterFlow.json
     IZkSync.json
-
 
 # [tox:tox]
 # envlist = py{38,39},mypy
