fix: improve examples and documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = zksync2
 description = zkSync2 python client sdk
 long_description = file: README.md
-author = Viktor Yastrebov
+author = Danijel Radakovic
 url = https://zksync.io
 license = MIT
 
