--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zksync2"
-version = "0.4.0"
+version = "0.5.0"
 authors = [
-  { name="Viktor Yastrebov", email="vyastrebov@vareger.com" },
+  { name="Danijel Radakovic", email="danijel@txfusion.io" },
 ]
 description = "zkSync2 python client sdk"
 readme = "README.md"
