--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zksync2"
-version = "0.6.0-beta.1"
+version = "0.6.0"
 authors = [
   { name="Danijel Radakovic", email="danijel@txfusion.io" },
 ]
