--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license = MIT
 [options]
 packages = find:
 install_requires =
-    eip712_structs == 1.1.0
+    eip712_structs_ng >= 2.0.1
     web3==6.0.0
 
 python_requires = >=3.10
