--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,7 @@ license = MIT
 [options]
 packages = find:
 install_requires =
-    eip712_structs == 1.1.0
-    web3>=6.3.0
+    web3==6.11.4
 
 python_requires = >=3.8
 setup_requires =
