--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license = MIT
 [options]
 packages = find:
 install_requires =
-    web3==6.11.4
+    web3>=6.10.0
 
 python_requires = >=3.8
 setup_requires =
