--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           node-version: "lts/*"
       - name: Install dependencies
-        run: npm install -g @commitlint/cli @commitlint/config-conventional
+        run: npm install -g @commitlint/cli@18.6.1 @commitlint/config-conventional@18.6.2
       - name: Configure
         run: |
           echo 'module.exports = {"extends": ["@commitlint/config-conventional"]}' > commitlint.config.js
@@ -60,7 +60,7 @@ jobs:
         with:
           node-version: "lts/*"
       - name: Install dependencies
-        run: npm install -g @commitlint/cli @commitlint/config-conventional
+        run: npm install -g @commitlint/cli@18.6.1 @commitlint/config-conventional@18.6.2
       - name: Configure
         run: |
           echo 'module.exports = {"extends": ["@commitlint/config-conventional"]}' > commitlint.config.js
