--- a/setup.cfg
+++ b/setup.cfg
@@ -47,9 +47,17 @@ zksync2.manage_contracts.contract_abi =
 # extras = test
 # commands = mypy .
 #
-# [mypy]
-# show_error_codes = True
-# no_implicit_optional = True
+
+[flake8]
+max-line-length = 99
+
+[mypy]
+disallow_untyped_defs = True
+no_implicit_optional = True
+check_untyped_defs = True
+warn_return_any = True
+warn_unused_ignores = True
+show_error_codes = True
 #
 # [mypy-setuptools.*]
 # ignore_missing_imports = True
