ci: trigger test on push against main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Run tests
 on:
   push:
-    branches: [ main, beta ]
+    branches: [ master, beta ]
   workflow_dispatch:
   pull_request:
-    branches: [ main, beta ]
+    branches: [ master, beta ]
     types: [ opened, reopened, synchronize ]
 
 permissions:
