feat: update `web3` to the latest version
BREAKING CHANGE: update to `web3` `v7`

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = zksync2
-description = zkSync2 python client sdk
+description = ZKsync python client sdk
 long_description = file: README.md
 author = Danijel Radakovic
 url = https://zksync.io
