--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.2.0"
 authors = [
   { name="Matter Labs", email= "hello@matterlabs.io" },
 ]
-description = "zkSync2 python client sdk"
+description = "ZKsync python client sdk"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
